# 31-08-2025-web

./: README.md  example.py  main.py  pyproject.toml  tasks.json
src/: logger.py  save_strategies.py  task_commands.py  task_entity.py
